# price_analyzer

./: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  docker-compose.local.yml  docker-compose.prod.yml  main.py  pyproject.toml
alerts/: admin.py  interfaces.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
alerts/migrations/: 0001_initial.py  0002_initial.py
config/: __init__.py  celery.py  urls.py
config/settings/: base.py  dev.py  prod.py
currencies/: admin.py  interfaces.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
currencies/migrations/: 0001_initial.py
prices/: admin.py  choices.py  dtos.py  interfaces.py  models.py  services.py  tasks.py  utils.py
prices/migrations/: 0001_initial.py
products/: admin.py  choices.py  dtos.py  errors.py  interfaces.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
products/migrations/: 0001_initial.py  0002_add_default_stores.py  0003_alter_productstore_external_id.py
users/: admin.py  models.py
users/migrations/: 0001_initial.py
